<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory
        android:title="Gestures ">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_setting_gesture_disable"
            android:key="disableGestures"
            android:summary="@string/mcl_disable_gestures_subtitle"
            android:title="@string/mcl_disable_gestures" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="timeLongPressTrigger"
            android:summary="@string/mcl_setting_subtitle_longpresstrigger"
            android:title="@string/mcl_setting_title_longpresstrigger"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="10"
            android:icon="@drawable/ic_setting_gesture_time"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Buttons">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="buttonscale"
            android:title="@string/mcl_setting_title_buttonscale"
            android:summary="@string/mcl_setting_subtitle_buttonscale"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            android:icon="@drawable/ic_setting_control_scale"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Virtual mouse">

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousescale"
            android:summary="@string/mcl_setting_subtitle_mousescale"
            android:title="@string/mcl_setting_title_mousescale"

            app2:selectable="false"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true"
            android:icon="@drawable/ic_setting_pointer_scale"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="mousespeed"
            android:summary="@string/mcl_setting_subtitle_mousespeed"
            android:title="@string/mcl_setting_title_mousespeed"
            android:icon="@drawable/ic_setting_mouse_speed"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            app2:showSeekBarValue="true" />
        <SwitchPreference
            android:key="mouse_start"
            android:title="@string/preference_mouse_start_title"
            android:summary="@string/preference_mouse_start_description"
            />

    </PreferenceCategory>




</PreferenceScreen>