<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="Video settings" >
        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer"
            android:defaultValue="opengles2"
            android:entries="@array/renderer"
            android:entryValues="@array/renderer_values"
            android:icon="@drawable/ic_setting_engine"
            app2:useSimpleSummaryProvider="true"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            android:icon="@drawable/ic_setting_hide_notch"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:seekBarIncrement="5"
            android:icon="@drawable/ic_setting_screen_resolution"
            />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:id="@+id/customSeekBarPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_setting_gesture_time"
            android:key="xinset"
            android:summary="Add padding/insets around the HD Client to help with reachability"
            android:title="Canvas Padding"
            app2:seekBarIncrement="10"
            app2:selectable="false"
            app2:showSeekBarValue="true" />
        <SwitchPreference
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:defaultValue="false"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            />
    </PreferenceCategory>
</PreferenceScreen>