<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:singleLine="true"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/preference_renderer_mobileglues_settings" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mg_option_glsl_cache"
                app:layout_constraintBottom_toTopOf="@+id/mg_input_max_glsl_cache_size" />

            <EditText
                android:id="@+id/mg_input_max_glsl_cache_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                app:layout_constraintBottom_toTopOf="@+id/text_option_angle" />

            <TextView
                android:id="@+id/text_option_angle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mg_option_angle"
                app:layout_constraintBottom_toTopOf="@+id/mg_spinner_angle"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/mg_spinner_angle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/text_option_no_error" />

            <TextView
                android:id="@+id/text_option_no_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mg_option_no_error"
                app:layout_constraintBottom_toTopOf="@+id/mg_spinner_no_error"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/mg_spinner_no_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/text_option_multidraw_mode" />

            <TextView
                android:id="@+id/text_option_multidraw_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mg_option_multidraw_mode"
                app:layout_constraintBottom_toTopOf="@+id/mg_spinner_multidraw_mode"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/mg_spinner_multidraw_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/mg_switch_ext_gl43" />

            <Switch
                android:id="@+id/mg_switch_ext_gl43"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mg_option_ext_gl43"
                app:layout_constraintBottom_toTopOf="@+id/mg_switch_ext_cs" />

            <Switch
                android:id="@+id/mg_switch_ext_cs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mg_option_ext_cs"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>